<resources>
    <string name="app_name">V-vote</string>
    <string name="design_string">Design</string>
    <string name="admin_string_for_button">Admin</string>
    <string name="commission_string_for_button">Commission</string>
    <string name="user_string_for_button">User</string>
    <string name="signInString">Sign In</string>
    <string name="hint_login_email">Enter Email</string>
    <string name="hint_login_password">Enter Password</string>
    <string name="forgotPasswordString">Forgot Password?</string>
    <string name="signUpForNewString">New To V-vote? Register Here.</string>
    <string name="hint_login_unique_id">Enter Your Unique Id</string>
    <string name="registerCommissionerString">New To V-vote?Apply Here.</string>
    <string name="hint_login_name">Enter Commission\'s Name</string>
    <string name="hint_login_commisioners_name">Enter Commissioner\'s Name</string>
    <string name="hint_login_phone_no">Enter Phone Number</string>
    <string name="hint_login_aadhar_no">Enter Aadhar Number</string>
    <string name="authenticateYourselfString">Authenticate Yourself</string>
    <string name="signUpButtonString">Sign Up</string>
    <string name="hint_login_first_name">Enter First Name</string>
    <string name="hint_login_last_name">Enter Last Name</string>
    <string name="submitString">Submit</string>
    <string name="applicantsListString">Applicant\'s List</string>
    <string name="ActiveUsersString">Active Users</string>
    <string name="admin_dashboard_string_for_button">Admin Dashboard</string>
    <string name="applicantsString">Applicants</string>
    <string name="applicantsDetailString">Applicant\'s Detail</string>
    <string name="commission_name_string_ad">Commission\'s Name</string>
    <string name="commissioner_name_string_ad">Commissioner\'s Name</string>
    <string name="commissioner_string_for_button">Commissioner</string>
    <string name="phone_string_ad">Phone Number</string>
    <string name="phone_no_string_ad">9601483908</string>
    <string name="email_string_ad">Email</string>
    <string name="email_textview">kotakvishal@gmail.com</string>
    <string name="aadhar_string_ad">Aadhar Number</string>
    <string name="aadhar_textview">123456789012</string>
    <string name="approveString">Approve</string>
    <string name="refresh_string_for_button">Refresh</string>
    <string name="refresh_string">Refresh</string>
    <string name="title_string">Title:</string>
    <string name="heading_commissioner_string">Election\'s Details</string>
    <string name="election_title_hint">Enter Title Of The Election</string>
    <string name="elections_date_tv">Date of Elections:</string>
    <string name="election_date_hint">Enter Date of Results</string>
    <string name="candidate_1_tv">Candidate 1</string>
    <string name="candidate_1_hint">Enter Candidate 1</string>
    <string name="candidate_2_tv">Candidate 2</string>
    <string name="candidate_2_hint">Enter Candidate 2</string>
    <string name="resultsDateString">Results Date</string>
    <string name="resultsDate_hint">Enter Results</string>
    <string name="save_details_string_db">Save Details</string>
    <string name="election_title">Title</string>
</resources>