<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dashboards.ApplicantsDetailActivity">
        <TextView
        android:id="@+id/applicants_Detail_Textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/applicantsDetailString"
        android:textSize="36sp"
        android:textColor="@color/primaryDarkColor"
        android:padding="4dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

    <TextView
            android:id="@+id/commission_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textStyle="bold"
            android:layout_margin="4dp"
            android:layout_below="@+id/applicants_Detail_Textview"
            android:textSize="18sp"
            android:text="@string/commission_name_string_ad"/>

    <TextView
        android:id="@+id/commissionsNameTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/applicants_Detail_Textview"
        android:layout_alignParentRight="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="right"
        android:padding="4dp"
        android:text="@string/commission_string_for_button"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textStyle="bold"
        android:layout_margin="4dp"
        android:layout_below="@+id/commission_tv"
        android:textSize="18sp"
        android:text="@string/commissioner_name_string_ad"/>

    <TextView
        android:id="@+id/commissionerNameTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/commissionsNameTextview"
        android:layout_alignParentRight="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="right"
        android:padding="4dp"
        android:text="@string/commissioner_string_for_button"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/phone_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textStyle="bold"
        android:layout_margin="4dp"
        android:layout_below="@+id/commissionerNameTextview"
        android:textSize="18sp"
        android:text="@string/phone_string_ad"/>

    <TextView
        android:id="@+id/phoneNumberTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/commissionerNameTextview"
        android:layout_alignParentRight="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="right"
        android:padding="4dp"
        android:text="@string/phone_no_string_ad"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textStyle="bold"
        android:layout_margin="4dp"
        android:layout_below="@+id/phone_tv"
        android:textSize="18sp"
        android:text="@string/email_string_ad"/>

    <TextView
        android:id="@+id/email_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneNumberTextview"
        android:layout_alignParentRight="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="right"
        android:padding="4dp"
        android:text="@string/email_textview"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/aadhar_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textStyle="bold"
        android:layout_margin="4dp"
        android:layout_below="@+id/email_tv"
        android:textSize="18sp"
        android:text="@string/aadhar_string_ad"/>
    <TextView
        android:id="@+id/aadhar_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_textview"
        android:layout_alignParentRight="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="right"
        android:padding="4dp"
        android:text="@string/aadhar_textview"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/approve_button_applicants_details_screen"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aadhar_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style_2"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/approveString"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="DuplicateSpeakableTextCheck" />
</RelativeLayout>