<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".signinscreens.CommissionerSignInScreen">
    <ImageView
        android:id="@+id/design_commissioner_sign_in_screen"
        android:layout_width="156dp"
        android:layout_height="156dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/design_string"
        android:src="@drawable/upper_design" />
    <TextView
        android:id="@+id/signInTextview_commissioner_sign_in_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signInString"
        android:textColor="@color/primaryColor"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-medium"
        android:layout_alignStart="@+id/outlinedTextFieldEmailSignIn_commissioner_sign_in_screen"
        android:layout_below="@+id/design_commissioner_sign_in_screen"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldEmailSignIn_commissioner_sign_in_screen"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login_email"
        app:hintTextColor="@color/primaryColor"
        android:textColorHint="@color/primaryColor"
        app:boxStrokeColor="@color/primaryColor"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/signInTextview_commissioner_sign_in_screen"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEdittextSignIn_commissioner_sign_in_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxEms="1"
            android:maxLines="1"
            android:singleLine="true"
            android:fontFamily="sans-serif"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="#757575"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldPasswordSignIn_commissioner_sign_in_screen"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login_password"
        app:hintTextColor="@color/primaryColor"
        android:textColorHint="@color/primaryColor"
        app:boxStrokeColor="@color/primaryColor"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/outlinedTextFieldEmailSignIn_commissioner_sign_in_screen"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEdittextSignIn_commissioner_sign_in_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxEms="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/greyColor"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldPhoneNumber_commissioner_sign_in_screen"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login_phone_no"
        app:hintTextColor="@color/primaryColor"
        android:textColorHint="@color/primaryColor"
        app:boxStrokeColor="@color/primaryColor"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/outlinedTextFieldPasswordSignIn_commissioner_sign_in_screen"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumberEdittextSignIn_commissioner_sign_in_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxEms="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/greyColor"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldUniqueIdSignIn_commissioner_sign_in_screen"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login_unique_id"
        app:hintTextColor="@color/primaryColor"
        android:textColorHint="@color/primaryColor"
        app:boxStrokeColor="@color/primaryColor"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/outlinedTextFieldPhoneNumber_commissioner_sign_in_screen"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/uniqueIdEdittextSignIn_commissioner_sign_in_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxEms="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/greyColor"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signIn_button_commissioner_sign_in_screen"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/outlinedTextFieldUniqueIdSignIn_commissioner_sign_in_screen"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style_2"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/signInString"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/forgotPasswordTextview_commissioner_sign_in_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signIn_button_commissioner_sign_in_screen"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/forgotPasswordString"
        android:textColor="@color/primaryColor"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/signUpTextview_commissioner_sign_in_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerCommissionerString"
        android:textColor="@color/primaryColor"
        android:textStyle="bold"
        android:layout_margin="4dp"
        android:textSize="20sp"
        android:layout_below="@+id/forgotPasswordTextview_commissioner_sign_in_screen"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-medium"/>

    <ProgressBar
        android:id="@+id/progress_bar_commissioner_sign_in_screen"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_below="@+id/signUpTextview_commissioner_sign_in_screen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:visibility="invisible"
        />
</RelativeLayout>